unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/loan__Investor_Loan_Account_Txns__c.object-meta.xml
<CustomObject>
    <label>Investor Loan Transaction</label>
    <nameField>
        <displayFormat>ILTID-{0000000000}</displayFormat>
        <label>Investor Loan Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investor Loan Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>