unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__ACH_Filename__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_Filename__c</fullName>
    <label>ACH Filename</label>
    <length>100</length>
    <type>Text</type>
</CustomField>