unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Charged_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Charged_Off_Date__c</fullName>
    <description>Investment Order charged off date.</description>
    <label>Charged Off Date</label>
    <type>Date</type>
</CustomField>