unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Charged_Off_Fees__c.field-meta.xml
<CustomField>
    <fullName>loan__Charged_Off_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Charged Off fees for an investment order.</description>
    <label>Charged Off Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>