unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__GL_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__GL_Post_Date__c</fullName>
    <label>GL Post Date</label>
    <type>Date</type>
</CustomField>