unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Interest_accrual_from_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_accrual_from_Date__c</fullName>
    <description>At the time of this transaction, Interest accrual is done from, this is for the informational purpose.</description>
    <label>Interest Accrual From Date</label>
    <type>Date</type>
</CustomField>