unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Interest_Accrual_On_Prin_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Accrual_On_Prin_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This field will show on what amount interest has been calculated.</description>
    <label>Interest Accrual Prin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>