unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Interest_Accrual_To_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Accrual_To_Date__c</fullName>
    <description>Interest accrual Done till date</description>
    <label>Interest Accrual To Date</label>
    <type>Date</type>
</CustomField>