unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Interest_Accrued_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Accrued_Amount__c</fullName>
    <description>Calculated Interest Accrued amount as on Payout date.</description>
    <label>Interest Accrued Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>