unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Interest_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Service_Charge__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Service charge calculated on the interest Payout amount.</description>
    <label>Interest Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>