unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Investor_Loan__c.field-meta.xml
<CustomField>
    <fullName>loan__Investor_Loan__c</fullName>
    <label>Investment Order</label>
    <referenceTo>loan__Investor_Loan__c</referenceTo>
    <relationshipLabel>Investor Loan Transactions</relationshipLabel>
    <relationshipName>Investor_Loan_Txns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>