unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__IOA_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__IOA_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field captures the IOA amount paid to Investor for a particular loan payment transaction</description>
    <label>IOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>