unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Loan_Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Payment Transaction</label>
    <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
    <relationshipLabel>Investor Loan Transactions</relationshipLabel>
    <relationshipName>Investor_Loan_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>