unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Loan_Payment_Transaction_Time__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Payment_Transaction_Time__c</fullName>
    <description>Time stamp of Loan Payment Transaction. Investor Transactions must be reversed in order starting from last investor payment created. We use this field to detect which Investor Transaction to reverse first.</description>
    <label>Loan Payment Transaction Time</label>
    <type>DateTime</type>
</CustomField>