unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Old_Service_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Old_Service_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Service Rate, before this txn posting.</description>
    <label>Old Service Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>