unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Parent_Txn_Ref__c.field-meta.xml
<CustomField>
    <fullName>loan__Parent_Txn_Ref__c</fullName>
    <description>reference for the transactions resulting in this it could be other loan Txn or any this else going forward.</description>
    <label>Parent Txn Ref</label>
    <length>20</length>
    <type>Text</type>
</CustomField>