unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Mode__c</fullName>
    <formula>loan__Loan_Payment_Transaction__r.loan__Payment_Mode__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Mode</label>
    <type>Text</type>
</CustomField>