unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Post_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Post_Date__c</fullName>
    <label>Post Date</label>
    <type>Date</type>
</CustomField>