unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Principal_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__Principal_Paid__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Payment made towards Principal amount</description>
    <label>Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>