unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Principal_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>loan__Principal_Service_Charge__c</fullName>
    <label>Principal Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>