unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Reason__c.field-meta.xml
<CustomField>
    <fullName>loan__Reason__c</fullName>
    <label>Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>