unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Rebate_Amount_On_Payoff__c.field-meta.xml
<CustomField>
    <fullName>loan__Rebate_Amount_On_Payoff__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rebate Amount On Payoff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>