unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Reinvest_Principal__c.field-meta.xml
<CustomField>
    <fullName>loan__Reinvest_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Investment order setting track field</description>
    <label>Reinvest Principal</label>
    <type>Checkbox</type>
</CustomField>