unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Sent_to_ACH__c.field-meta.xml
<CustomField>
    <fullName>loan__Sent_to_ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to ACH</label>
    <type>Checkbox</type>
</CustomField>