unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Approval_Date__c</fullName>
    <label>Approval Date Snapshot</label>
    <type>Date</type>
</CustomField>