unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Certificate_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Certificate_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The certificate rate for this investment. This is the rate which will be payable to the investor who buys invested in this loan and is entitled to its receivable stream.</description>
    <label>Certificate Rate Snapshot</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>