unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Enabled_Flag__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Enabled_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>snapshot field</description>
    <label>Snapshot Enabled Flag</label>
    <type>Checkbox</type>
</CustomField>