unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Interest_Exempted_From_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Interest_Exempted_From_Service_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Snapshot for Interest exempted interest from service fee</description>
    <label>Interest Exempted From Serv Fee Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>