unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Interest_Rate_On_Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Interest_Rate_On_Loan_Account__c</fullName>
    <description>Interest Rate On Loan account</description>
    <label>Interest Rate On Loan Snapshot</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>