unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Interest_Rounding_Error__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Interest_Rounding_Error__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field stores the interest rounding error whenever investor payout happens. It will be used to restore the interest rounding error at the time of investor payout reversal.</description>
    <label>Interest Rounding Error Snapshot</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>