unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Inv_Accrued_Interest_Amt__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Inv_Accrued_Interest_Amt__c</fullName>
    <description>Payable Accrued Interest amount to investor</description>
    <inlineHelpText>Payable Accrued Interest amount to investor</inlineHelpText>
    <label>Accrued Interest Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>