unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Inv_Last_Interest_Accrual_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Inv_Last_Interest_Accrual_Post_Date__c</fullName>
    <description>Last Interest accrual Posted</description>
    <label>Last Interest Accrual Date Snapshot</label>
    <type>Date</type>
</CustomField>