unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Investment_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Investment Amount Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>