unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Investor_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Investor_Start_Date__c</fullName>
    <description>Start date of the Investor</description>
    <label>Start Date Snapshot</label>
    <type>Date</type>
</CustomField>