unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_IOA_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_IOA_Amount_Paid__c</fullName>
    <description>This field captures the snapshot of Ioa amount paid to investor before payout to investor</description>
    <label>IOA Amount Paid Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>