unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Late_Fees_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Late_Fees_Amount_Paid__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total Late Fees Paid on this account.</description>
    <label>Late Fees Amount Paid Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>