unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Loan_Delinquent_Days__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Loan_Delinquent_Days__c</fullName>
    <description>Number_of_Days_Overdue__c on loan account</description>
    <label>Loan Delinquent Days Snapshot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>