unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Loan_Principal_Remaining__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Loan_Principal_Remaining__c</fullName>
    <label>Loan Principal Remaining Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>