unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Loan_Status__c</fullName>
    <description>Loan_Status__c on loan account</description>
    <label>Loan Status Snapshot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>