unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Principal_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Principal_Amount_Paid__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total Principal Amount Paid back to Investor.</description>
    <label>Principal Amount Paid Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>