unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Rebate_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Rebate_Amount_Paid__c</fullName>
    <label>SS Rebate Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>