unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Service_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Service_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>On this rate service charge will be charged to the investors for servicing loans, making Note payments and maintaining the accounts.
The service charge paid by investors is on all amounts paid by the borrowers.</description>
    <label>Service Rate Snapshot</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>