unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Share__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Share__c</fullName>
    <description>Describes the percent share of Investor in Loan amount</description>
    <label>Share Snapshot</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>