unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__SS_Status__c.field-meta.xml
<CustomField>
    <fullName>loan__SS_Status__c</fullName>
    <description>Describes whether the record is in Active or Inactive state</description>
    <label>Status Snapshot</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>De-Active</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>