unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Tax__c.field-meta.xml
<CustomField>
    <fullName>loan__Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>