unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Total_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Service_Charge__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>