unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Date__c</fullName>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>