unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Txn_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Txn_Amount__c</fullName>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>