unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Txn_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Txn_Code__c</fullName>
    <label>Transaction Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>CERTIFICATE RATE CHANGE</fullName>
            </value>
            <value>
                <fullName>PAYMENT APPROVAL</fullName>
            </value>
            <value>
                <fullName>SERVICE RATE CHANGE</fullName>
            </value>
            <value>
                <fullName>DE-ACTIVE</fullName>
            </value>
            <value>
                <fullName>PAYMENT RELEASE</fullName>
            </value>
            <value>
                <fullName>PAYMENT REVERSED</fullName>
            </value>
            <value>
                <fullName>PRINCIPAL REINVESTED</fullName>
            </value>
            <value>
                <fullName>INTEREST REINVESTED</fullName>
            </value>
            <value>
                <fullName>PRINCIPAL &amp; INTEREST REINVESTED</fullName>
            </value>
            <value>
                <fullName>CHARGE OFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>