unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Txn_Description__c.field-meta.xml
<CustomField>
    <fullName>loan__Txn_Description__c</fullName>
    <label>Transaction Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>