unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Txn_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Txn_Type__c</fullName>
    <label>Txn Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rebate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>