unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Vat__c.field-meta.xml
<CustomField>
    <fullName>loan__Vat__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>