unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Waived__c.field-meta.xml
<CustomField>
    <fullName>loan__Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this ILT is a waived ILT. If marked as waived the TXN should be used as for loan state change but not for actual cash movement as waived txn are to be ignored for cash movements</description>
    <label>Waived</label>
    <type>Checkbox</type>
</CustomField>