unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/loan__Write_Off_Recovery_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Write_Off_Recovery_Payment__c</fullName>
    <formula>loan__Loan_Payment_Transaction__r.loan__Write_Off_Recovery_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Write Off Recovery Payment</label>
    <type>Checkbox</type>
</CustomField>