unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/peer__Investment_Order_Sale_Transaction__c.field-meta.xml
<CustomField>
    <fullName>peer__Investment_Order_Sale_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When transaction code is "SALE", this field would have a reference of Investment Order Sale Transaction. Also when IOs are activated or deactivated due to purchase/sale this field would have a reference of Investment Order Sale Transaction.</description>
    <label>Investment Order Sale Transaction</label>
    <referenceTo>peer__Investment_Order_Sale_Transaction__c</referenceTo>
    <relationshipLabel>Investor Loan Transactions</relationshipLabel>
    <relationshipName>Investor_Loan_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>