unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/fields/peer__Sale_Price_Per_Share__c.field-meta.xml
<CustomField>
    <fullName>peer__Sale_Price_Per_Share__c</fullName>
    <label>Sale Price Per Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>