unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/recordTypes/loan__Active.recordType-meta.xml
<RecordType>
    <fullName>loan__Active</fullName>
    <active>true</active>
    <description>Record type for Active Transaction Code.</description>
    <label>Active</label>
</RecordType>