unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/recordTypes/loan__Certificate_Rate_Changed.recordType-meta.xml
<RecordType>
    <fullName>loan__Certificate_Rate_Changed</fullName>
    <active>true</active>
    <label>Certificate Rate Changed</label>
</RecordType>