unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/recordTypes/loan__Interest_Invested_Principal_Returned.recordType-meta.xml
<RecordType>
    <fullName>loan__Interest_Invested_Principal_Returned</fullName>
    <active>true</active>
    <description>Record type for INTEREST REINVESTED Transaction Code.</description>
    <label>Interest Invested Principal Returned</label>
</RecordType>