unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/recordTypes/loan__Investor_Payment_Reversed.recordType-meta.xml
<RecordType>
    <fullName>loan__Investor_Payment_Reversed</fullName>
    <active>true</active>
    <label>Investor Payment Reversed</label>
</RecordType>