unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/recordTypes/loan__IO_Deactivated.recordType-meta.xml
<RecordType>
    <fullName>loan__IO_Deactivated</fullName>
    <active>true</active>
    <description>Investment Order Deactivation</description>
    <label>IO Deactivated</label>
</RecordType>