unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/recordTypes/loan__Payment_Due.recordType-meta.xml
<RecordType>
    <fullName>loan__Payment_Due</fullName>
    <active>true</active>
    <description>Record type for 'PAYMENT APPROVAL' transaction code.</description>
    <label>Payment Approval</label>
</RecordType>