unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/recordTypes/loan__Payment_Paid.recordType-meta.xml
<RecordType>
    <fullName>loan__Payment_Paid</fullName>
    <active>true</active>
    <description>Record type for 'PAYMENT RELEASE' Transaction Code.</description>
    <label>Payment Release</label>
</RecordType>