unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/recordTypes/loan__Principal_Interest_Invested.recordType-meta.xml
<RecordType>
    <fullName>loan__Principal_Interest_Invested</fullName>
    <active>true</active>
    <description>Record type for PRINCIPAL &amp; INTEREST REINVESTED Transaction Code.</description>
    <label>Principal-Interest Invested</label>
</RecordType>