unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/recordTypes/loan__Principal_Invested_Interest_Returned.recordType-meta.xml
<RecordType>
    <fullName>loan__Principal_Invested_Interest_Returned</fullName>
    <active>true</active>
    <description>Record type for 'PRINCIPAL REINVESTED' Transaction Code.</description>
    <label>Principal Invested Interest Returned</label>
</RecordType>