unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/recordTypes/loan__Service_Rate_Changed.recordType-meta.xml
<RecordType>
    <fullName>loan__Service_Rate_Changed</fullName>
    <active>true</active>
    <label>Service Rate Changed</label>
</RecordType>