unpackaged/main/default/objects/loan__Investor_Loan_Account_Txns__c/recordTypes/loan__Write_Off.recordType-meta.xml
<RecordType>
    <fullName>loan__Write_Off</fullName>
    <active>true</active>
    <label>Write Off</label>
</RecordType>